Fixed sidebar spacing.

--- a/csmconnect/scheduler/static/scheduler/styles/homepage.css
+++ b/csmconnect/scheduler/static/scheduler/styles/homepage.css
@@ -19,7 +19,7 @@ body {
 }
 
 .sidebar-container {
-  /* margin-left: 70px; */
+  margin-left: 70px;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
@@ -28,7 +28,7 @@ body {
 
 .sidebar-title {
   font-weight: bolder;
-  margin-left: 55px;
+  /* margin-left: 55px; */
 }
 
 ul {
